test/deca/context/invalid/void_decl_var.deca
// Description:
//   void type impossible
//
// Résultat :
// Ligne 8 fausse

{
    void x = 0;
}
